change index css

--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@
   justify-content: center;
 }
 
+#home {
+  background-image: url(Images/header5.png);
+}
+
 h5 {
   transform: rotate(270deg);
   transition: 0.7s ease;
